wired up buttons, checkout page for snackbar, click events

--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -31,7 +31,7 @@
         </form>
     </md-card-content>
     <md-card-actions>
-        <button md-button color="primary">Submit</button>
+        <button md-button color="primary" (click)="onSubmit()">Submit</button>
         <button md-button>Cancel</button>
     </md-card-actions>
 </md-card>
