--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,19 @@
 
     <md-toolbar>
         <div class="filler"></div>
-        <button md-button>home</button>
-        <button md-button>Coupons</button>
-        <button md-button>Checkout</button>
-        <button md-button>help</button>
+        <button md-button routerLink=""><md-icon>home</md-icon></button>
+        <button md-button routerLink="/coupon"><md-icon>receipt</md-icon></button>
+        <button md-button routerLink="/checkout"><md-icon>shopping_cart</md-icon></button>
+        <button md-button routerLink="/help"><md-icon>help</md-icon></button>
+
+        <md-toolbar-row>
+            <button md-button (click)="sidenav.toggle()">
+            <md-icon>menu</md-icon></button>
+        </md-toolbar-row>
+
 
     </md-toolbar>
 
-    <button button md-button (click)="sidenav.toggle()">Menu</button>
 
     <div class="container">
         <router-outlet></router-outlet>
