--- a/src/app/pages/coupon/coupon.page.html
+++ b/src/app/pages/coupon/coupon.page.html
@@ -1,1 +1,12 @@
-<p>Coupon</p>
+<md-card>
+    <md-card-header>
+        <md-card-title>Coupon</md-card-title>
+        <md-card-subtitle>Click the button for a coupon</md-card-subtitle>
+    </md-card-header>
+    <md-card-content>
+
+        <button md-raised-button color="accent" (click)="onOpenDialog()">Get Code</button>
+
+    </md-card-content>
+
+</md-card>
